Fix swatch spacing

--- a/style.css
+++ b/style.css
@@ -242,8 +242,10 @@ h4 {
 }
 
 .swatch {
-  width: 75px;
-  height: 75px;
+  width: 20%;
+  height: auto;
+  padding-bottom: 20%;
+  margin-left: 5%;
   margin-top: 20px;
 }
 
